Added controller and view for Employee Profile.

--- a/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
+++ b/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
@@ -127,6 +127,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="AppContext.cs" />
+    <Compile Include="Controllers\EmployeeProfilesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -179,6 +181,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\EmployeeProfiles\Create.cshtml" />
+    <Content Include="Views\EmployeeProfiles\Delete.cshtml" />
+    <Content Include="Views\EmployeeProfiles\Details.cshtml" />
+    <Content Include="Views\EmployeeProfiles\Edit.cshtml" />
+    <Content Include="Views\EmployeeProfiles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
