--- a/TimeKeepingAndPayroll/Web.config
+++ b/TimeKeepingAndPayroll/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -8,6 +8,12 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
+  <connectionStrings>
+    <add name="EmployeeProfileContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EmployeeProfileContext-20200324134923; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EmployeeProfileContext-20200324134923.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="EmplyeeProfileContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EmplyeeProfileContext-20200324142434; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EmplyeeProfileContext-20200324142434.mdf"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
