--- a/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
+++ b/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
@@ -235,19 +235,6 @@
     <Content Include="Views\Invoices\Details.cshtml" />
     <Content Include="Views\Invoices\Edit.cshtml" />
     <Content Include="Views\Invoices\EmployeeIndex.cshtml" />
-    <Content Include="Views\Shared\_FullName.cshtml" />
-    <Content Include="Views\Employees\Create.cshtml" />
-    <Content Include="Views\Employees\Delete.cshtml" />
-    <Content Include="Views\Employees\Details.cshtml" />
-    <Content Include="Views\Employees\Edit.cshtml" />
-    <Content Include="Views\Employees\Index.cshtml" />
-    <Content Include="Views\Shared\_FullAddress.cshtml" />
-    <Content Include="Views\Employees\Login.cshtml" />
-    <Content Include="Views\Attendances\Create.cshtml" />
-    <Content Include="Views\Attendances\Delete.cshtml" />
-    <Content Include="Views\Attendances\Details.cshtml" />
-    <Content Include="Views\Attendances\Edit.cshtml" />
-    <Content Include="Views\Attendances\Index.cshtml" />
     <Content Include="Views\Invoices\ManagerIndex.cshtml" />
     <Content Include="Views\Shared\_FullName.cshtml" />
     <Content Include="Views\Employees\Create.cshtml" />
@@ -262,6 +249,9 @@
     <Content Include="Views\Attendances\Details.cshtml" />
     <Content Include="Views\Attendances\Edit.cshtml" />
     <Content Include="Views\Attendances\Index.cshtml" />
+    <Content Include="Views\Employees\ViewEmployees.cshtml" />
+    <Content Include="Views\Attendances\EditAttendance.cshtml" />
+    <Content Include="Views\Attendances\HoursWorked.cshtml" />
     <Content Include="Views\TimeOffs\Create.cshtml" />
     <Content Include="Views\TimeOffs\Delete.cshtml" />
     <Content Include="Views\TimeOffs\Details.cshtml" />
