--- a/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
+++ b/TimeKeepingAndPayroll/TimeKeepingAndPayroll.csproj
@@ -178,10 +178,6 @@
     <Compile Include="Tests\AttendanceTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\timekeepingdb.mdf" />
-    <Content Include="App_Data\timekeepingdb_log.ldf">
-      <DependentUpon>timekeepingdb.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -295,7 +291,9 @@
     <Content Include="Views\Contacts\Edit.cshtml" />
     <Content Include="Views\Contacts\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
